# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
description = "Probe for querying service state through a minimal HTTP service"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "service-probe"
publish = true
repository = "https://gitlab.opencode.de/opentalk/libs/service-probe"
version = "0.2.0"

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
log = "0.4.22"
snafu = "0.8.5"
tokio = { version = "1.41.1", features = ["macros", "net", "rt", "sync"] }
