# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
members = ["service-probe", "service-probe-client", "service-probe-common"]
resolver = "2"

[workspace.package]
description = "Probe for querying service state through a minimal HTTP service"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
repository = "https://gitlab.opencode.de/opentalk/libs/service-probe"
version = "0.4.0-alpha"

[workspace.dependencies]
service-probe = { path = "service-probe", version = "0.4.0-alpha" }
service-probe-common = { path = "service-probe-common", version = "0.4.0-alpha" }

http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
log = "0.4.22"
reqwest = "0.12.24"
snafu = "0.8.5"
tokio = { version = "1.41.1", features = ["macros", "net", "rt", "sync"] }
url = "2.5.7"
