# SPDX-FileCopyrightText: OpenTalk Team <mail@opentalk.eu>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
members = ["service-probe", "service-probe-client", "service-probe-common"]
resolver = "2"

[workspace.package]
description = "Probe for querying service state through a minimal HTTP service"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
repository = "https://gitlab.opencode.de/opentalk/libs/service-probe"
version = "0.4.0"

[workspace.dependencies]
service-probe = { path = "service-probe", version = "0.4.0" }
service-probe-common = { path = "service-probe-common", version = "0.4.0" }

http-body-util = "0.1"
hyper = { version = "1.5", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4"
reqwest = { version = "0.13", default-features = false }
snafu = "0.9.0"
tokio = { version = "1.41", features = ["macros", "net", "rt", "sync"] }
url = "2.5.7"
